Bug 1308234 - Fix signatures of Servo_ functions to match servo glue; r=emilio

MozReview-Commit-ID: K0k93JoFVKb